# content-tag

./: .eslintignore  .eslintrc.cjs  .eslintrc.js  .gitignore  .prettierignore  .release-plan.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE.md  build.sh  content-tag.code-workspace  glimmer-swc.code-workspace  index.d.cts  index.d.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  post-wasm-build.mjs  rust-toolchain  vite.config.js  vitest.config.js
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  plan-release.yml  publish.yml  release.yml
benches/: parse_bench.rs
pkg/: README.md  content_tag.d.ts  content_tag.js  content_tag_bg.wasm.d.ts  index.d.ts  node.cjs  package.json  standalone.js  utils.d.ts  utils.js
sample/: component.gjs  expr.gjs  simple.js
src/: bindings.rs  importer.rs  lib.rs  locate.rs  main.rs  snippets.rs  test_helpers.rs  transform.rs  transformer.rs
test/: alias-exports.test.js  node-api-esm.mjs  node-api.cjs  node-api.js  parse.test.js  process.test.js  require.test.cjs
test-browser/: parse.test.js  process.test.js
test/browser/: alias-exports.test.js
test/node/: parse.test.js  process.test.js  require.test.cjs  transform.test.js
tests/__swc_snapshots__/src/transform.rs/: backtick_in_template.js  class_member_inside_expression.js  content_tag_export_default.js  content_tag_template_expression.js  content_tag_template_member.js  do_not_interpret_js_escapes_in_hbs.js  dollar_in_template.js  expression_inside_class_member.js  inner_expression.js
tests/browser/: package.json  parse.test.js  process.test.js  vitest.config.js
tests/node/: package.json
tests/node/test/: node-api-esm.mjs
