[package]
name = "content-tag"
description = "A rust program that uses a fork of swc to parse and transform Javascript containing the content-tag proposal"
repository = "https://github.com/embroider-build/content-tag"
license = "MIT"
version = "1.1.2"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[dependencies]
swc_common = { git = "https://github.com/ef4/swc.git", branch = "content-tag", features=["tty-emitter"] }
swc = { git = "https://github.com/ef4/swc.git", branch = "content-tag" }
# The feature set here needs to be chosen carefully to not accidentally enable
# "plugin_mode" and the related stuff, because with that enabled, wasm32 builds
# expect swc plugin-runner specific environment that we don't use. When that
# happens, the javascript shims try to do "require('env')" to find the missing
# stuff, which is nonsense and blows up.
swc_core = { git = "https://github.com/ef4/swc.git", branch = "content-tag", features = ["ecma_ast", "common", "ecma_visit", "ecma_transforms", "__testing_transform"] }
swc_atoms = { git = "https://github.com/ef4/swc.git", branch = "content-tag" }
swc_ecma_parser = { git = "https://github.com/ef4/swc.git", branch = "content-tag" }
swc_ecma_codegen = { git = "https://github.com/ef4/swc.git", branch = "content-tag" }
swc_ecma_ast = { git = "https://github.com/ef4/swc.git", branch = "content-tag" }
swc_ecma_visit = { git = "https://github.com/ef4/swc.git", branch = "content-tag" }
swc_ecma_utils = { git = "https://github.com/ef4/swc.git", branch = "content-tag" }
swc_ecma_transforms = { git = "https://github.com/ef4/swc.git", branch = "content-tag" }
swc_error_reporters = { git = "https://github.com/ef4/swc.git", branch = "content-tag" }
lazy_static = "1.4.0"
base64 = "0.21.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6.5"

wasm-bindgen = "0.2.95"
js-sys = "0.3.68"

# this is an indirect dependency, we just need to enable its "js" feature
getrandom = { version = "0.2.10", features = ["js"] }

[dev-dependencies]
difference = "2"



